# DupeHell

./: .gitignore  BENCHMARK.md  BUGS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ETHICS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  WATERMARK.md  _dump_schemas.py  _explore.py  bench_domains.py  benchmark-measure-10M-hell-ipc.md  benchmark-measure-10M-hell-parquet.md  benchmark-measure-1M-hell-ipc.md  benchmark-measure-1M-medium-ipc.md  benchmark-measure-1M-medium-parquet.md  benchmark-measure-20M-hell-ipc.md  benchmark-measure-5M-hell-parquet.md  deny.toml  dupehell_pool_data_audit_checklist.md  hunt1407.md  index.html  pyproject.toml  test_errors.py  test_pipeline.py
.github/workflows/: ci.yml  pypi.yml  static.yml
assets/pools/: DISTRIBUTION_NOTES.md  README.md  academic_field.json  account_type.json  address_type.json  ae_grade.json  aircraft_type.json  auto_part_category.json  benefit_type.json  billing_category.json  biotech_equipment.json  call_type.json  carrier_type.json  case_category.json  cause_category.json  citizenship_status.json  city.json  claim_type.json  color.json  companies.json  company.json  competition_name.json  connection_type.json  construction_type.json  contract_type.json  country_code.json  court_name.json  cpt_codes.json  crop_type.json  cuisine_type.json  currency.json  customer_group.json  department.json  device_make.json  device_model.json  document_number_prefixes.json  document_type.json  domain.json  drug_class.json  drug_name_brand.json  (+96 more)
benchmark/: benchmark-measure-1M-hell-parquet.md  benchmark-measure-5M-hell-ipc.md
demo/: README.md  splink_benchmark.py
docs/: API.md  BENCHMARK.md  CONTRIBUTING.md  GETTING_STARTED.md  SECURITY.md  WATERMARK.md  index.html
python/dupehell/: __init__.py  _core.pyi  models.py  schema.py
schemas/: academia.json  agriculture.json  automotive.json  aviation.json  banking.json  biotech.json  blockchain.json  construction.json  crm.json  cybersecurity.json  ecommerce.json  education.json  energy.json  fashion.json  fintech.json  food_beverage.json  gaming.json  government.json  healthcare.json  hospitality.json  hr.json  insurance.json  kyc.json  legal.json  logistics.json  manufacturing.json  maritime.json  media.json  mining.json  nonprofit.json  pharma.json  publishing.json  realestate.json  renewable_energy.json  retail.json  social_media.json  sports.json  supplychain.json  technology.json  telecom.json  (+1 more)
src/: buf_gen.rs  canary.rs  column_gen.rs  context.rs  difficulty.rs  entity_gen.rs  faker.rs  fast_template.rs  fk_remap.rs  graph_gen.rs  gt.rs  hn_common.rs  ipc_sink.rs  lib.rs  main.rs  pipeline.rs  pool_lookup.rs  rng.rs  schema.rs  sink.rs
src/noise/: addresses.rs  companies.rs  dates.rs  extra.rs  identifiers.rs  mod.rs  names.rs  typos.rs  visual.rs
tests/: test_graph_gen.py
