[package]
name = "dupehell"
version = "0.4.2"
edition = "2024"
license = "MIT"
description = "Synthetic multi-domain dataset generator for record linkage benchmarking — Educational Use Only"
authors = ["DupeHell Contributors"]
repository = "https://github.com/vntoinekaio/DupeHell"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dupehell"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
arrow = "59"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_pcg = "0.3"
rayon = "1"
parquet = "59"
log = "0.4"
sha2 = "0.10"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
