[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
name = "dupehell"
version = "0.4.0"
description = "Synthetic record linkage dataset generator"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["pydantic>=2.0"]

[tool.maturin]
module-name = "dupehell._core"
python-source = "python"
